# MCP-PROJECTT

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
.codex/: AGENTS.md  history.md  memory.txt  notes.txt  preferences.yml
.devcontainer/: Dockerfile  Dokerfile  devcontainer.json  pyproject.toml  requirements.txt
docs/: 01_projectStructure.md  01_project_structure.md  01_uso (main.py).md  02_codex.md  03_paquetesPython.md  04_usingModulesWithPytest.md  05_validationGuide.md  10_commitGuideline.md  20_UtilCmds.md  HISTORY.md
docs/course/: mcp_course_overview.md
docs/guides/: 00_devcontainerGuideline.md
mcp/: __init__.py
mcp/server/: __init__.py  fastmcp.py
mcp_project/: __init__.py  __main__.py  cli.py  history.md  project_tree.py  tree.py
mcp_project/arxiv-fastmcp-server/: README.md  requirements.txt
mcp_project/arxiv-fastmcp-server/src/: server.py
mcp_project/core/: __init__.py  classify.py  enrich.py  filters.py  snapshot.py  tree.py
mcp_project/tools/: __init__.py  tree_generator.py
mcp_projectt/: __init__.py
mcp_projectt/core/: classify.py  enrich.py  tree.py
mcp_projectt/tools/: __init__.py  type_checker.py
mcp_server/: __init__.py  __main__.py  app.py  main.py
tests/: test_classify.py  test_filters.py  test_imports.py  test_server.py  test_server_script.py  test_snapshot.py  test_tree.py
