[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_project"
version = "0.1.0"
description = "Example project skeleton"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
mcp-project = "mcp_project.cli:main"

[tool.setuptools.packages.find]
where = ["."]
[tool.setuptools.package-data]
"mcp_project" = ["py.typed"]

