[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_project"
version = "0.1.0"
description = "Example project skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pytest==8.4.0",
  "requests==2.32.4",
  "arxiv",
  "httpx<0.28",
  "fastapi",
  "uvicorn[standard]",
]

[project.scripts]
mcp-project = "mcp_project.cli:main"
mcp-server  = "mcp_server.__main__:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["mcp_project*", "mcp_server*"]

[tool.setuptools.package-data]
"mcp_project" = ["py.typed"]
